Improvement: Improve wrapping of the outside-left and outside-right regions, resolves #255

--- a/scss/boost_union/post.scss
+++ b/scss/boost_union/post.scss
@@ -1320,6 +1320,24 @@ body.theme-boost-union-commincourse {
             margin-left: .5rem;
             margin-right: .5rem;
         }
+
+        /* Wrap the left and right outside regions below the main content. */
+        .left-region-nextmaincontent {
+            &.main-inner-outside-left-right.main-inner-outside-nextmaincontent,
+            &.main-inner-outside-left.main-inner-outside-nextmaincontent,
+            &.main-inner-outside-right.main-inner-outside-nextmaincontent,
+            &.main-inner-outside-left-right.main-inner-outside-nearwindowedges,
+            &.main-inner-outside-left.main-inner-outside-nearwindowedges,
+            &.main-inner-outside-right.main-inner-outside-nearwindowedges {
+                display: grid;
+                #theme-block-region-outside-left {
+                    order: 1;
+                }
+                #theme-block-region-outside-right {
+                    order: 2;
+                }
+            }
+        }
     }
 }
 
